# pg-listener

./: Cargo.toml  LICENSE  README.md  Taskfile.yml  docker-compose.yml  flake.nix  taplo.toml
src/: channel.rs  error.rs  lib.rs  mod.rs  notification.rs  notification_listener.rs  service.rs
tests/: e2e_listener.rs  listener_service.rs  main.rs
